load("@rules_go//go:def.bzl", "go_test")

go_test(
    name = "itest_test",
    srcs = ["dynamodb_test.go"],
    deps = [
        "//arn",
        "//server",
        "//services/dynamodb",
        "@com_github_aws_aws_sdk_go_v2//aws",
        "@com_github_aws_aws_sdk_go_v2_service_dynamodb//:dynamodb",
        "@com_github_aws_aws_sdk_go_v2_service_dynamodb//types",
    ],
)
