load("@rules_go//go:def.bzl", "go_test")

go_test(
    name = "itest_test",
    srcs = ["kms_test.go"],
    data = ["snapshots.json"],
    deps = [
        "//arn",
        "//server",
        "//services/kms",
        "@com_github_aws_aws_sdk_go_v2//aws",
        "@com_github_aws_aws_sdk_go_v2_service_kms//:kms",
        "@com_github_aws_aws_sdk_go_v2_service_kms//types",
        "@com_github_aws_smithy_go//:smithy-go",
        "@com_github_google_go_cmp//cmp",
    ],
)
