load("@rules_go//go:def.bzl", "go_test")

go_test(
    name = "itest_test",
    srcs = ["s3_test.go"],
    deps = [
        "//server",
        "//services/s3",
        "@com_github_aws_aws_sdk_go_v2//aws",
        "@com_github_aws_aws_sdk_go_v2_service_s3//:s3",
        "@com_github_aws_aws_sdk_go_v2_service_s3//types",
    ],
)
