load("@rules_go//go:def.bzl", "go_test")

go_test(
    name = "itest_test",
    srcs = ["sqs_test.go"],
    deps = [
        "//arn",
        "//server",
        "//services/sqs",
        "@com_github_aws_aws_sdk_go_v2//aws",
        "@com_github_aws_aws_sdk_go_v2_service_sqs//:sqs",
        "@com_github_aws_aws_sdk_go_v2_service_sqs//types",
    ],
)
